Move to JDK11 now that IntelliJ stable is running on Java 11
Since most of this project is Kotlin this really only affects the output
bytecode, but there is some generated Java code that it affects too. I'd
rather get on JDK11 sooner rather than later now that IntelliJ is
running on it.